--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,8 +57,9 @@ jobs:
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_PREFIX_PATH="$QT_UNIX/lib/cmake" \
             -S .. -B .
-
-          cmake --build . --config Release -- -j
+            
+          JOBS=$(nproc || echo 2)
+          cmake --build . --config Release -- -j${JOBS}
 
       - name: Upload build artifact
         uses: actions/upload-artifact@v4
