--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,11 +59,12 @@ jobs:
           cmake --build . --config Release --parallel ${JOBS}
 
       - name: Deploy Qt dependencies
-        shell: bash
+        shell: msys2 {0}
         run: |
           mkdir deploy
           cp build/FileXorProcessor.exe deploy/
-          windeployqt --mingw deploy/FileXorProcessor.exe
+          windeployqt deploy/FileXorProcessor.exe
+
           
       - name: Collect artifacts
         if: always()
