--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Windows · build (MSYS2 / MinGW-w64 + Qt6)
+name: Windows · build (MSYS2 / MinGW-w64 + Qt6 + windeployqt)
 
 on:
   push:
@@ -14,19 +14,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup MSYS2 (toolchain + Qt6 + tools)
+      - name: Setup MSYS2 (toolchain + Qt6)
         uses: msys2/setup-msys2@v2
         with:
           update: true
           install: >
             mingw-w64-x86_64-toolchain
             mingw-w64-x86_64-qt6
-            mingw-w64-x86_64-qt6-tools
             mingw-w64-x86_64-cmake
             mingw-w64-x86_64-ninja
             mingw-w64-x86_64-pkg-config
 
-      - name: Debug info
+      - name: Debug info (MSYS2 environment)
         shell: msys2 {0}
         run: |
           echo "MSYSTEM=$MSYSTEM"
@@ -34,35 +33,50 @@ jobs:
           c++ --version
           which cmake
           cmake --version
-          which windeployqt
-          windeployqt --version
+          qmake --version || true
 
       - name: Configure & build
         shell: msys2 {0}
         run: |
           set -e
           CMAKE_PREFIX_PATH="/mingw64/lib/cmake"
-
           mkdir -p build
           cd build
-
           cmake -G Ninja \
             -DCMAKE_BUILD_TYPE=Release \
             -DCMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}" \
             -S .. -B .
-
           JOBS=$(nproc || echo 2)
           cmake --build . --config Release --parallel ${JOBS}
 
+      - name: Install official Qt tools (windeployqt)
+        uses: jurplel/install-qt-action@v4
+        with:
+          version: 6.7.2
+          host: windows
+          target: desktop
+          arch: win64_mingw
+          modules: qttools
+          cache: true
+
       - name: Deploy Qt dependencies
-        shell: msys2 {0}
+        shell: pwsh
         run: |
+          $qtTools = "${env:QT_ROOT_DIR}\bin\windeployqt.exe"
+          Write-Host "Using windeployqt from: $qtTools"
           mkdir deploy
-          cp build/FileXorProcessor.exe deploy/
-          windeployqt deploy/FileXorProcessor.exe
+          Copy-Item build\FileXorProcessor.exe deploy\
+          & "$qtTools" deploy\FileXorProcessor.exe
+
+      - name: Create ZIP package
+        shell: pwsh
+        run: |
+          Compress-Archive -Path deploy\* -DestinationPath FileXorProcessor-Windows-x64.zip
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v4
         with:
           name: FileXorProcessor-Windows-x64
-          path: deploy
+          path: |
+            deploy
+            FileXorProcessor-Windows-x64.zip
