--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,81 +1,65 @@
-name: Build Windows (MinGW + Qt)
+
+name: Windows · build (MSYS2 / MinGW-w64 + Qt6)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, master ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, master ]
 
 jobs:
-  build-windows:
+  build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install MSYS2
+      - name: Setup MSYS2 (install mingw toolchain, Qt6, cmake, ninja)
         uses: msys2/setup-msys2@v2
         with:
           update: true
           install: >
-            mingw-w64-x86_64-gcc
+            mingw-w64-x86_64-toolchain
+            mingw-w64-x86_64-qt6
+            mingw-w64-x86_64-qt6-tools
             mingw-w64-x86_64-cmake
             mingw-w64-x86_64-ninja
-            mingw-w64-x86_64-ntldd
-            make
-
-      - name: Install Qt
-        uses: jurplel/install-qt-action@v4
-        with:
-          version: 6.7.2
-          host: windows
-          target: desktop
-          arch: win64_mingw
-          cache: true
-          modules: qttools
-          set-env: true
-          add-tools-to-path: true
-
-      - name: Configure & Build
+            mingw-w64-x86_64-pkg-config
+      - name: Debug info (show compilers / Qt)
+        shell: msys2 {0}
+        run: |
+          echo "MSYSTEM=$MSYSTEM"
+          which c++
+          c++ --version
+          which cmake
+          cmake --version
+          which qmake || true
+          qmake --version || true
+          echo "Qt pkgcmake dir: /mingw64/lib/cmake"
+      
+      - name: Configure & build (MSYS2 / MinGW shell)
         shell: msys2 {0}
         run: |
           set -e
-          QT_UNIX="$(cygpath -u "$QT_ROOT_DIR")"
-          echo "Using QT (unix path): $QT_UNIX"
-
+          unset QT_ROOT_DIR || true
+          unset QT_PLUGIN_PATH || true
+          unset QML2_IMPORT_PATH || true
+          CMAKE_PREFIX_PATH="/mingw64/lib/cmake"
           mkdir -p build
           cd build
           cmake -G Ninja \
             -DCMAKE_BUILD_TYPE=Release \
-            -DCMAKE_PREFIX_PATH="$QT_UNIX/lib/cmake" \
+            -DCMAKE_PREFIX_PATH="${CMAKE_PREFIX_PATH}" \
             -S .. -B .
           JOBS=$(nproc || echo 2)
-          cmake --build . --config Release -- -j${JOBS}
-
-      - name: Deploy dependencies
-        shell: msys2 {0}
-        run: |
-          set -e
-          mkdir deploy
-          cp build/FileXorProcessor.exe deploy/
-
-          echo "=== Поиск зависимостей ==="
-          ntldd -R deploy/FileXorProcessor.exe 2>/dev/null || true | grep "=> /mingw64" || true | awk '{print $3}' | sort -u > dll_list.txt
-
-          echo "=== Копируем DLL ==="
-          while IFS= read -r dll; do
-            if [ -f "$dll" ]; then
-              echo "Копируем: $dll"
-              cp "$dll" deploy/
-            fi
-          done < dll_list.txt
-
-          echo "=== Содержимое deploy/ ==="
-          ls -l deploy
-
-      - name: Upload Build Artifact
+          cmake --build . --config Release --parallel ${JOBS}
+      - name: Collect artifacts
+        if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: FileXorProcessor-Windows-x64
-          path: deploy
+          name: build-artifacts
+          path: |
+            build/*.exe
+            build/**/*.exe
+            build/*.dll
+            build/**/*.dll
